objects/OUV_Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>OUV_InventoryStatus__c</fullName>
        <formula>CASE(OUV_ReportingLevel2__c, &quot;Terms of Employment&quot;, &quot;C&quot;,
&quot;Job Related&quot;, &quot;C&quot;,
&quot;Press/PR&quot;,&quot;C&quot;,
&quot;Corporate Social Responsibility (CSR)&quot;,&quot;C&quot;,
&quot;VIP Loans&quot;,&quot;C&quot;,
&quot;Launch/Events&quot;,&quot;C&quot;,
&quot;Training&quot;,&quot;C&quot;,
&quot;JLR Experience&quot;,&quot;C&quot;,
&quot;Sponsorship&quot;,&quot;C&quot;,
&quot;Marketing Asset Production&quot;,&quot;C&quot;,
&quot;Product Placement&quot;,&quot;C&quot;,
&quot;Demonstrators&quot;,&quot;C&quot;,
&quot;Homologation Cars&quot;,&quot;C&quot;,
&quot;Customer Service -Diagnostics/Methods/Product Investigation/Training&quot;,&quot;C&quot;,
&quot;Customer Service - Loan Vehicles&quot;,&quot;C&quot;,
&quot;Product Development Vehicles&quot;,&quot;C&quot;,
&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;C&quot;,
&quot;Pool Cars&quot;,&quot;C&quot;,
&quot;All Other&quot;,&quot;C&quot;,
&quot;Cars awaiting sale / rework / disposal&quot;,&quot;U&quot;,
&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;U&quot;,
&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;U&quot;,
&quot;Classic Donor vehicles&quot;,&quot;U&quot;,
&quot;Customer Buybacks&quot;,&quot;U&quot;,
&quot;Fleet Buybacks&quot;,&quot;B&quot;,
&quot;Written down/Provisioned Units (£1 Vehicles)&quot;,&quot;A&quot;,
&quot;Heritage/Museum Vehicles&quot;,&quot;A&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_NextMOTRequired__c</fullName>
        <label>Next MOT Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_PIINoticePlaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDPR Notice Placed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_PrimaryLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The location at which the vehicle is normally stored</inlineHelpText>
        <label>Primary Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vehicle Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ReportingLevel1__c</fullName>
        <label>OUV Reporting Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Buybacks</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicles</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Employee Cars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ReportingLevel2__c</fullName>
        <label>OUV Reporting Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_ReportingLevel1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Social Responsibility (CSR)</fullName>
                </value>
                <value>
                    <fullName>VIP Loans</fullName>
                </value>
                <value>
                    <fullName>Launch/Events</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>JLR Experience</fullName>
                </value>
                <value>
                    <fullName>Marketing Asset Production</fullName>
                </value>
                <value>
                    <fullName>Product Placement</fullName>
                </value>
                <value>
                    <fullName>Demonstrators</fullName>
                </value>
                <value>
                    <fullName>Homologation Cars</fullName>
                </value>
                <value>
                    <fullName>Customer Service -Diagnostics/Methods/Product Investigation/Training</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Loan Vehicles</fullName>
                </value>
                <value>
                    <fullName>Product Development Vehicles</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Support Functions Vehicles</fullName>
                </value>
                <value>
                    <fullName>Pool Cars</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Cars awaiting sale / rework / disposal</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Employee vehicle returns/MRC Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Classic Donor vehicles</fullName>
                </value>
                <value>
                    <fullName>Customer Buybacks</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks</fullName>
                </value>
                <value>
                    <fullName>Written down/Provisioned Units (£1 Vehicles)</fullName>
                </value>
                <value>
                    <fullName>Heritage/Museum Vehicles</fullName>
                </value>
                <value>
                    <fullName>Terms of Employment</fullName>
                </value>
                <value>
                    <fullName>Job Related</fullName>
                </value>
                <value>
                    <fullName>Press/PR</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ReportingLevel3__c</fullName>
        <label>OUV Reporting Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_ReportingLevel2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Royal Household (RHH)</fullName>
                </value>
                <value>
                    <fullName>VIP - Corporate</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Charged)</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Free of Charge)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                    <isActive>false</isActive>
                    <label>Free of Charge</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_TrimDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Trim_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_market_location__c</fullName>
        <description>The actual market using the vehicle</description>
        <label>Market Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Vehicle_taxes__c</fullName>
        <label>Other Vehicle taxes/duties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_User_County__c</fullName>
        <label>Vehicle User – County</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>In_Control_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Control Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ATOJustification__c</fullName>
        <inlineHelpText>This field is populated from the ATO. Please ensure no Personal data is included.</inlineHelpText>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_ActualHandInDate__c</fullName>
        <label>Actual Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validation rules will not run if this field is being changed</description>
        <label>OUV_ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_InsuranceValidTo__c</fullName>
        <label>Insurance Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Location_Details__c</fullName>
        <formula>OUV_PrimaryLocation__r.BillingCity +  IF( NOT( ISBLANK(OUV_PrimaryLocation__r.BillingCity)) &amp;&amp; NOT( ISBLANK(OUV_PrimaryLocation__r.BillingState)) , &quot;, &quot;, &quot;&quot;) +  OUV_PrimaryLocation__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Location Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ModelDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Vehicle_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_PaintDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Paint_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_RoadTaxValidFrom__c</fullName>
        <label>Road Tax Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_ShortDescription__c</fullName>
        <inlineHelpText>This field is populated from the ATO. Please ensure no Personal data is included.</inlineHelpText>
        <label>Quick Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TransmissionCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Transmission_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transmission Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleSubStatus__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_VehicleMasterStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Order committed</fullName>
                </value>
                <value>
                    <fullName>In Build</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Approved Not Ordered​</fullName>
                </value>
                <value>
                    <fullName>Available / Idle</fullName>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>In Preparation / In Repair</fullName>
                </value>
                <value>
                    <fullName>Write-Off​</fullName>
                    <label>Insurance Write Off</label>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Awaiting Inspection</fullName>
                </value>
                <value>
                    <fullName>Inspected Awaiting Re-work</fullName>
                </value>
                <value>
                    <fullName>In Re-work / In Repair</fullName>
                </value>
                <value>
                    <fullName>Ready for Sale</fullName>
                </value>
                <value>
                    <fullName>Booked for Re-Marketing Event/Auction</fullName>
                </value>
                <value>
                    <fullName>Return to Stock</fullName>
                </value>
                <value>
                    <fullName>Customer Handover</fullName>
                </value>
                <value>
                    <fullName>Ready for Invoice</fullName>
                </value>
                <value>
                    <fullName>Kit Of Parts (KOP)</fullName>
                </value>
                <value>
                    <fullName>Gifted</fullName>
                </value>
                <value>
                    <fullName>In FMS</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Market_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Market Summary</label>
        <referenceTo>OUV_AnnualMarketSummary__c</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Costs_Accessory__c</fullName>
        <label>Local Costs &amp; Accessory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetQuarter__c</fullName>
        <formula>IF((MONTH( OUV_ProposedAddToFleetDate__c )&gt;=1 &amp;&amp; MONTH(OUV_ProposedAddToFleetDate__c )&lt;=3),&apos;Q4&apos;, 
IF((MONTH(OUV_ProposedAddToFleetDate__c )&gt;=4 &amp;&amp; MONTH(OUV_ProposedAddToFleetDate__c )&lt;=6),&apos;Q1&apos;, 
IF((MONTH(OUV_ProposedAddToFleetDate__c )&gt;=7 &amp;&amp; MONTH(OUV_ProposedAddToFleetDate__c )&lt;=9),&apos;Q2&apos;, 
IF((MONTH(OUV_ProposedAddToFleetDate__c )&gt;=10 &amp;&amp; MONTH(OUV_ProposedAddToFleetDate__c )&lt;=12),&apos;Q3&apos;,&apos;NA&apos;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Add To Fleet Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_AgePostHandInDate__c</fullName>
        <formula>IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Handed In&apos;, Today() -   OUV_ActualHandInDate__c , IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Unavailable&apos;, OUV_Disposal_Date__c - OUV_ActualHandInDate__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Post Hand In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Disposal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disposal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_Disposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_MarketDescription__c</fullName>
        <formula>CASE( OUV_VistaVehicle__r.OUV_Market_Code__c,
&quot;IE&quot;,&quot;Iran&quot;,
&quot;KC&quot;,&quot;Kuwait&quot;,
&quot;AD&quot;,&quot;Algeria&quot;,
&quot;MS&quot;,&quot;Oman&quot;,
&quot;SD&quot;,&quot;Sudan North&quot;,
&quot;BB&quot;,&quot;Bahrain&quot;,
&quot;YA&quot;,&quot;Yemen&quot;,
&quot;PA&quot;,&quot;Pakistan&quot;,
&quot;GR&quot;,&quot;Georgia&quot;,
&quot;PL&quot;,&quot;Palestine&quot;,
&quot;DU&quot;,&quot;UAE&quot;,
&quot;LY&quot;,&quot;Libya&quot;,
&quot;SR&quot;,&quot;Sudan South&quot;,
&quot;EB&quot;,&quot;Egypt&quot;,
&quot;LB&quot;,&quot;Lebanon&quot;,
&quot;AU&quot;,&quot;Abu Dhabi&quot;,
&quot;IF&quot;,&quot;Iraq&quot;,
&quot;QA&quot;,&quot;Qatar&quot;,
&quot;MJ&quot;,&quot;Morocco&quot;,
&quot;AZ&quot;,&quot;Azerbaijan&quot;,
&quot;JC&quot;,&quot;Jordan&quot;,
&quot;TF&quot;,&quot;Tunisia&quot;,
&quot;EM&quot;,&quot;UAE&quot;,
&quot;SC&quot;,&quot;Saudi Arabia&quot;,
&quot;JB&quot;,&quot;Japan&quot;,
&quot;MH&quot;,&quot;Mexico&quot;,
&quot;PH&quot;,&quot;Portugal&quot;,
&quot;IJ&quot;,&quot;Italy - Arm/Gov/Mil&quot;,
&quot;UB&quot;,&quot;United Kingdom&quot;,
&quot;NB&quot;,&quot;Netherlands&quot;,
&quot;BH&quot;,&quot;Brazil&quot;,
&quot;AK&quot;,&quot;Austria&quot;,
&quot;FF&quot;,&quot;France&quot;,
&quot;US&quot;,&quot;USA&quot;,
&quot;KB&quot;,&quot;South Korea&quot;,
&quot;CJ&quot;,&quot;Colombia&quot;,
&quot;DE&quot;,&quot;Germany&quot;,
&quot;IT&quot;,&quot;Italy&quot;,
&quot;CB&quot;,&quot;Canada&quot;,
&quot;ES&quot;,&quot;Spain&quot;,
&quot;CO&quot;,&quot;CJLR&quot;,
&quot;AJ&quot;,&quot;Australia&quot;,
&quot;MT&quot;,&quot;Singapore&quot;,
&quot;CH&quot;,&quot;China&quot;,
&quot;UR&quot;,&quot;Russia&quot;,
&quot;SK&quot;,&quot;Spain- Military Code&quot;,
&quot;IC&quot;,&quot;India&quot;,
&quot;SH&quot;,&quot;South Africa&quot;,
&quot;TB&quot;,&quot;Taiwan&quot;,
&quot;BD&quot;,&quot;Belgium&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Paint_Description__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Paint_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ReportingCategory__c</fullName>
        <formula>CASE(
OUV_ReportingLevel2__c, 
&quot;Terms of Employment&quot;, &quot;Unactionable&quot;, 
&quot;Job Related&quot;, &quot;Unactionable&quot;,
&quot;Press/PR&quot;,&quot;Active&quot;,
&quot;Corporate Social Responsibility (CSR)&quot;,&quot;Active&quot;,
&quot;VIP Loans&quot;,
CASE(OUV_ReportingLevel3__c,
&quot;Royal Household (RHH)&quot;,&quot;Active&quot;,
&quot;VIP - Individual (Free of Charge)&quot;,&quot;Active&quot;,
&quot;VIP - Individual (Charged)&quot;,&quot;Unactionable&quot;,
&quot;VIP - Corporate&quot;,&quot;Active&quot;,&quot;&quot;),
&quot;Launch/Events&quot;,&quot;Active&quot;,
&quot;Training&quot;,&quot;Active&quot;,
&quot;JLR Experience&quot;,&quot;Active&quot;,
&quot;Sponsorship&quot;,&quot;Active&quot;,
&quot;Marketing Asset Production&quot;,&quot;Active&quot;,
&quot;Product Placement&quot;,&quot;Active&quot;,&quot;Demonstrators&quot;,&quot;Active&quot;,
&quot;Homologation Cars&quot;,&quot;Active&quot;,
&quot;Customer Service -Diagnostics/Methods/Product Investigation/Training&quot;,&quot;Active&quot;,
&quot;Customer Service - Loan Vehicles&quot;,&quot;Active&quot;,&quot;Product Development Vehicles&quot;,&quot;Active&quot;,
&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;Active&quot;,
&quot;Pool Cars&quot;,&quot;Active&quot;,
&quot;All Other&quot;,&quot;Active&quot;,
&quot;Cars awaiting sale / rework / disposal&quot;,&quot;Inactive&quot;,
&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,
&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,
&quot;Classic Donor vehicles&quot;,&quot;Inactive&quot;,
&quot;Customer Buybacks&quot;,&quot;Inactive&quot;,
&quot;Fleet Buybacks&quot;,&quot;Unactionable&quot;,
&quot;Written Down/Provisioned Units (£1 vehicles)&quot;,&quot;Unactionable&quot;,
&quot;Heritage/Museum Vehicles&quot;,&quot;Unactionable&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Reporting Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_StatusDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Status_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_User_ZIP_Code__c</fullName>
        <label>Vehicle User – ZIP Code</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Additional_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Finance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_DoA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_CustomerIdentifier__c</fullName>
        <inlineHelpText>Must not contain GDPR related information</inlineHelpText>
        <label>Customer Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_DeRegistrationDate__c</fullName>
        <label>De-Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_DerivativePackCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Derivative_Pack_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derivative Pack Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Employee_Privilege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OUV Employee Privilege</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ExpectedHandInDate__c</fullName>
        <formula>IF(

      AND(

         ISPICKVAL(OUV_VehicleMasterStatus__c, &apos;Pre-Live&apos;), 
         OUV_IsReplacementVehicle__c = false 


       ) ,

         OUV_ProposedHandInDate__c, 


       IF(
 
           AND( 

               ISPICKVAL(OUV_VehicleMasterStatus__c, &apos;Live&apos;) ,
               NOT( ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c, &apos;Approved&apos;) ) ,
               OUV_IsReplacementVehicle__c = false,
               ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) 

           ) , 

               OUV_ProposedHandInDate__c - OUV_ProposedAddToFleetDate__c + OUV_AddToFleetDate__c, 



              IF(

                  ISPICKVAL(OUV_VehicleMasterStatus__c, &apos;Handed In&apos;) ,  
                  OUV_ActualHandInDate__c, 

                  IF(

                      AND(
                          ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c, &apos;Approved&apos;) ,
                          NOT( ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) ) ,

                          OUV_IsReplacementVehicle__c = false 

                   ) ,

                         OUV_ApprovedNewRequestedHandInDate__c, 


                       IF(

                           AND(
    
                               ISPICKVAL(OUV_NewRequestedHandedInDateStatus__c, &apos;Approved&apos;) ,
                               NOT( ISBLANK(OUV_ApprovedNewRequestedHandInDate__c) ) 

                          ) , 

                               OUV_ApprovedNewRequestedHandInDate__c, 


                               IF(

                                  OUV_IsReplacementVehicle__c = true, 

                                  OUV_HandinDate__c,
                                  OUV_HandinDate__c) 

                                  ) 

                             ) 

                       ) 



                  ) 

             )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast/Actual Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_FleetAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Changed_Date__c</fullName>
        <description>The day the Vehicle changed Fleet last.</description>
        <label>OUV Fleet Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_InitialRetailPrice__c</fullName>
        <inlineHelpText>Estimated on ATO</inlineHelpText>
        <label>Initial Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_InsuranceValidFrom__c</fullName>
        <inlineHelpText>Only required if vehicle is not covered by standard company policy</inlineHelpText>
        <label>Insurance Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_ProposedHandInDate__c</fullName>
        <label>Proposed Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetFYQuarter__c</fullName>
        <description>Not a formula field to enable SOQL grouping. Set by same trigger that calculates the FY field.</description>
        <label>AddToFleetFYQuarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Full_Vin_Searchable__c</fullName>
        <description>This is updated every-time an OUV vehicle is created/edited and used to workaround the formula field search limitation on Full Vin</description>
        <label>Full Vin Searchable</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_HandInFinancialYear__c</fullName>
        <label>Hand In Financial Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_InitialDeliveryDate__c</fullName>
        <label>Initial Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Product_Description__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_RegistrationValidTo__c</fullName>
        <label>Registration Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Replacement_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_RetailPriceCurrency__c</fullName>
        <description>Linked to SAP</description>
        <label>Retail Price Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleMasterStatus__c</fullName>
        <label>Master Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Live</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Handed In</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                    <label>Disposed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_DeliveryDateCalCheck__c</fullName>
        <formula>IF(NOT(ISBLANK( OUV_DeliveryDate__c )),OUV_DeliveryDate__c + 21,null)</formula>
        <label>Delivery Date CalCheck</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_IsReplacementVehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the code to allow copying  expected hand in date  (date field ) to expected hand in date (formula field)</description>
        <label>Is Replacement Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ModelYearDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Model_Year_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_RegistrationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ResidualValuePercent__c</fullName>
        <description>Retail Price * Residual Value (%)</description>
        <label>Residual Value %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_UpdatedDisposalRoute__c</fullName>
        <label>Disposal Route Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                    <label>Scrap/Write down</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Additional_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_DoA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Age_Post_Registration__c</fullName>
        <description>Calculates the age of the vehicle from registration date up until the vehicle is handed in</description>
        <formula>IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Live&apos; || TEXT(OUV_VehicleMasterStatus__c)=&apos;Pre-Live&apos; , Today() -  OUV_RegistrationDate__c  , IF( TEXT(OUV_VehicleMasterStatus__c)=&apos;Handed In&apos; || TEXT(OUV_VehicleMasterStatus__c)=&apos;Unavailable&apos;, OUV_ActualHandInDate__c - OUV_RegistrationDate__c,null))</formula>
        <label>Age Post Registration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_DVLAInsuranceUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DVLA Insurance Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_Admin2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Administrator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_Admin3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet_Manager_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Necessary to prevent the Vehicle Owner change email derived from a change of Fleet Manager from the OUV Fleet</description>
        <label>OUV Fleet Manager Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_HandedInExtensionDate__c</fullName>
        <formula>(MONTH(OUV_AddToFleetDate__c) + 9) - MONTH(OUV_NewRequestedHandedInDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hand in Extension Vehicle Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_MarketFinanceDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_RegistrationValidFrom__c</fullName>
        <label>Registration Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Registration_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Vehicles_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>